--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "texteditor",
+  "name": "JATE",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "client": "cd client && npm start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/carter-adrian/textEditor.git"
-  },
-  "author": "Adrian Carter",
+  "keywords": [],
+  "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/carter-adrian/textEditor/issues"
-  },
-  "homepage": "https://github.com/carter-adrian/textEditor#readme",
   "dependencies": {
-    "codemirror": "^6.0.1",
-    "nodemon": "^2.0.21"
+    "express": "^4.17.1",
+    "if-env": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4"
   }
 }
