update json again

--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "JATE",
+  "name": "texteditor",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
-    "start": "npm run build && cd server && node server.js",
-    "server": "cd server nodemon server.js --ignore client",
-    "build": "cd client && npm run build",
-    "install": "cd server && npm i && cd ../client && npm i",
-    "client": "cd client && npm start"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/carter-adrian/textEditor.git"
+  },
+  "author": "Adrian Carter",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+  "bugs": {
+    "url": "https://github.com/carter-adrian/textEditor/issues"
   },
-  "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+  "homepage": "https://github.com/carter-adrian/textEditor#readme",
+  "dependencies": {
+    "codemirror": "^6.0.1",
+    "nodemon": "^2.0.21"
   }
 }
